# core

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  export_logs.ps1  export_logs.sh  fetch-secrets.ps1
apps/ai-python/: .dockerignore  .env.template  .gitignore  BOREHOLES_AR.md  CODEBASE_EXPLANATION.md  Dockerfile  README.md  describe.md  pyproject.toml  query_soil.py  requirements.txt  run.py  test_s3_integration.py
apps/ai-python/app/: __init__.py  config.py  main.py
apps/ai-python/app/routers/: __init__.py  analysis.py  analyze.py  boreholes.py  reports.py  risks.py  soil.py  topography.py
apps/ai-python/app/routers/client/: __init__.py  _helpers.py  bearing.py  boreholes.py  jobs.py  parcels.py  reports.py  risks.py  soil.py  topography.py
apps/ai-python/app/schemas/: __init__.py  analysis.py  boreholes.py  common.py  reports.py  risks.py  soil.py  topography.py
apps/ai-python/app/services/: __init__.py  borehole_service.py  client_mocks.py  gee_service.py  redis_service.py  report_builder.py  risk_service.py  s3_service.py  soilgrids_service.py  store.py  terrain_service.py  tile_service.py  tiles_service.py  topography_service.py  webhook_service.py
apps/ai-python/app/static/: index.html
apps/ai-python/data/models/: model_b_bundle.joblib  model_b_meta.json
apps/ai-python/scripts/: export_openapi.py
apps/ai-python/src/api/: main.py
apps/ai-python/tests/: test_api.py  test_gee.py  test_gee_drive_export.py  test_topography_services.py
geosense-ai/: .gitignore  README.md
(+825 files in other folders)
